--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                                 <video class="video-js vjs-default-skin" preload="" loop="" width="100%" height="100%"
                                     poster='media/video1_poster.jpg'>
                                     <source src="media/intro_columbia_video2.mp4" type='video/mp4' />
+                                    <source src="media/intro_columbia_video2.webm" type='video/webm' />
                                 </video>
 
 
