Change poster for intro video

--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
                                 data-volume="mute"
                                 style="z-index: 2">
 
-
                                 <video class="video-js vjs-default-skin" preload="" loop="" width="100%" height="100%"
-                                    poster='media/video1_poster.jpg'>
+                                    poster='media/video_poster.jpg'>
                                     <source src="media/intro_columbia_video2.mp4" type='video/mp4' />
                                     <source src="media/intro_columbia_video2.webm" type='video/webm' />
                                 </video>
