Remove spurious elements and titles

--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h3 class="h4">About</h3>
                         <div class="spacer-15"></div>
-                        <p class="lead">The Professional Development and Leadership program enhances the talents of graduate engineering students and broadens their skills in life and work. The program aims to build the engineering leaders of today and tomorrow.<a class="tipped" data-title="Sample Text" data-tipper-options='{"direction":"top"}'><b></p>
+                        <p class="lead">The Professional Development and Leadership program enhances the talents of graduate engineering students and broadens their skills in life and work. The program aims to build the engineering leaders of today and tomorrow.
+                        </p>
                     </div>
                 </div>
                 <div class="row mt-80">
@@ -304,7 +305,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="http://www.google.com" title="Consequat massa quis">
+                                <a class="" href="http://www.google.com" title="">
                                     <img class="item-container" src="img/portfolio/writing.jpg" alt="1" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -319,7 +320,7 @@
 
                         <div class="nf-item network">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/2.jpg" title="Vivamus elementum semper">
+                                <a class="" href="img/portfolio/2.jpg" title="">
                                     <img class="item-container" src="img/portfolio/industry.png" alt="2" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -334,7 +335,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/3.jpg" title="Quisque rutrum">
+                                <a class="" href="img/portfolio/3.jpg" title="">
                                     <img class="item-container" src="img/portfolio/present.jpg" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -349,7 +350,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/4.jpg" title="Tellus eget condimentum">
+                                <a class="" href="img/portfolio/4.jpg" title="">
                                     <img class="item-container" src="img/portfolio/collaboration.jpg" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -364,7 +365,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/5.jpg" title="Nullam quis ant">
+                                <a class="" href="img/portfolio/5.jpg" title="">
                                     <img class="item-container" src="img/portfolio/crosscultural.png" alt="5" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -379,7 +380,7 @@
 
                         <div class="nf-item network">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/6.jpg" title="Sed fringilla mauris">
+                                <a class="" href="img/portfolio/6.jpg" title="">
                                     <img class="item-container" src="img/portfolio/Alumni_RoundTableF12.jpg" alt="6" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -394,7 +395,7 @@
 
                         <div class="nf-item design">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/7.jpg" title="Augue velit cursus">
+                                <a class="" href="img/portfolio/7.jpg" title="">
                                     <img class="item-container" src="img/portfolio/design.png" alt="7" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -409,7 +410,7 @@
 
                         <div class="nf-item sync">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/8.jpg" title="Donec sodales sagittis">
+                                <a class="" href="img/portfolio/8.jpg" title="">
                                     <img class="item-container" src="img/portfolio/sync.jpg" alt="8" />
                                     <div class="item-mask">
                                         <div class="item-caption">
