New pages added

--- a/events.html
+++ b/events.html
@@ -260,7 +260,7 @@
                     <div class="nf-item design spacing all">
                         <div class="item-box">
                             <a href="portfolio-single4.html">
-                                <img alt="1" src="img/portfolio/34.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/ux.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Introduction to UX Design Thinking</h5>
@@ -288,7 +288,7 @@
                     <div class="nf-item network spacing all">
                         <div class="item-box">
                             <a href="portfolio-single5-slider.html">
-                                <img alt="1" src="img/portfolio/GraduateEngineersConnect.png" class="item-container">
+                                <img alt="1" src="img/portfolio/EngineersConnect2.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Engineers Connect</h5>
@@ -302,10 +302,10 @@
                     <div class="nf-item design spacing all">
                         <div class="item-box">
                             <a href="portfolio-single6-video.html">
-                                <img alt="1" src="img/portfolio/22.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/latex.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Makespace Training</h5>
+                                        <h5 class="white">LaTEX Workshop</h5>
                                         <p class="salmon">Design, Tech Skills</p>
                                     </div>
                                 </div>
@@ -330,7 +330,7 @@
                     <div class="nf-item design spacing all">
                         <div class="item-box">
                             <a href="portfolio-single8-vimeo.html">
-                                <img alt="1" src="img/portfolio/23.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/userstories.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Understanding User Stories</h5>
@@ -344,7 +344,7 @@
                     <div class="nf-item design spacing all">
                         <div class="item-box">
                             <a href="portfolio-single1.html">
-                                <img alt="1" src="img/portfolio/24.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/ideation.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Ideation & Prototyping</h5>
@@ -358,10 +358,10 @@
                     <div class="nf-item network spacing all">
                         <div class="item-box">
                             <a href="portfolio-single2.html">
-                                <img alt="1" src="img/portfolio/25.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/resumereview.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Start-Up Career Fair</h5>
+                                        <h5 class="white">Resume Review: Making the Most of Graduate Career Fairs</h5>
                                         <p class="salmon">Network, Communication</p>
                                     </div>
                                 </div>
@@ -442,11 +442,11 @@
                     <div class="nf-item build design spacing all">
                         <div class="item-box">
                             <a href="portfolio-single4.html">
-                                <img alt="1" src="img/portfolio/10.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/ideation.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">SQL/SAS Workshop</h5>
-                                        <p class="salmon">Build, Tech Skills</p>
+                                        <h5 class="white">Portfolio Management</h5>
+                                        <p class="salmon">Build, Design, Communication</p>
                                     </div>
                                 </div>
                             </a>
