--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="http://www.google.com" title="Consequat massa quis">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-build" title="Consequat massa quis">
                                     <img class="item-container" src="img/portfolio/writing.jpg" alt="1" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -319,7 +319,7 @@
 
                         <div class="nf-item network">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/2.jpg" title="Vivamus elementum semper">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-network" title="Vivamus elementum semper">
                                     <img class="item-container" src="img/portfolio/industry.png" alt="2" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -334,7 +334,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/3.jpg" title="Quisque rutrum">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-build" title="Quisque rutrum">
                                     <img class="item-container" src="img/portfolio/present.jpg" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -349,7 +349,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/4.jpg" title="Tellus eget condimentum">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-build" title="Tellus eget condimentum">
                                     <img class="item-container" src="img/portfolio/collaboration.jpg" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -364,7 +364,7 @@
 
                         <div class="nf-item build">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/5.jpg" title="Nullam quis ant">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-build" title="Nullam quis ant">
                                     <img class="item-container" src="img/portfolio/crosscultural.png" alt="5" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -379,7 +379,7 @@
 
                         <div class="nf-item network">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/6.jpg" title="Sed fringilla mauris">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-network" title="Sed fringilla mauris">
                                     <img class="item-container" src="img/portfolio/Alumni_RoundTableF12.jpg" alt="6" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -394,7 +394,7 @@
 
                         <div class="nf-item design">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/7.jpg" title="Augue velit cursus">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-design" title="Augue velit cursus">
                                     <img class="item-container" src="img/portfolio/design.png" alt="7" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -409,7 +409,7 @@
 
                         <div class="nf-item sync">
                             <div class="item-box">
-                                <a class="" href="img/portfolio/8.jpg" title="Donec sodales sagittis">
+                                <a class="" href="https://columbia-pdl.github.io/events.html#events-sync" title="Donec sodales sagittis">
                                     <img class="item-container" src="img/portfolio/sync.jpg" alt="8" />
                                     <div class="item-mask">
                                         <div class="item-caption">
