commit changes to photo

--- a/events.html
+++ b/events.html
@@ -288,7 +288,7 @@
                     <div class="nf-item network spacing all">
                         <div class="item-box">
                             <a href="portfolio-single5-slider.html">
-                                <img alt="1" src="img/portfolio/EngineersConnect2.png" class="item-container">
+                                <img alt="1" src="img/portfolio/engineersconnect2.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Engineers Connect</h5>
