changes to webpages

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <h3>The Core</h3>
                         </div>
                         <div class="spacer-15 text-center">
-                        <p>The Core are the building blocks to developing the engineering leaders of tomorrow. The PDL program lays a foundational platform that encompasses an array of course offerings available throughout the year to all graduate engineering students. Students are able to select a variety of workshop, events and/or activities that are included in the Core.</p>
+                        <p>The Core are the building blocks to developing the engineering leaders of tomorrow. The PDL program lays a foundational platform that encompasses an array of course offerings (i.e. courses, workshops, labs, competitions, etc.)  available throughout the year to all graduate engineering students.</p>
                         <p></p>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                     <div class="col-md-4 col-sm-12 mb-45">
                         <div class="page-icon-top"><i class="ion ion-ios-compose-outline"></i></div>
                         <h5>Communication</h5>
-                        <p>Communication is at the cornerstone of sucess. Through various workshops and trainings, students learn to master communication skills through writing, public speaking, and collaborative activities.</p>
+                        <p>Communication is the cornerstone of success. Through various workshops and trainings, students learn to master communication skills through writing, public speaking, networking and collaborative activities.</p>
                     </div>
                     <div class="col-md-4 col-sm-12 mb-45">
                         <div class="page-icon-top"><i class="ion ion-ios-person-outline"></i></div>
@@ -260,19 +260,19 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-sm-12 mb-45">
-                        <div class="page-icon-top"><i class="ion ion-ios-lightbulb-outline"></i></div>
-                        <h5>Entrepreurship & Innovation</h5>
-                        <p>Technology and innovation are the driving forces in solving complex problems around the world. Creative problem solving and the entrepreneurial mindset are important to developing a successful venture, whether as a start-up or working on a project within a company.</p>
-                    </div>
-                    <div class="col-md-4 col-sm-12 mb-45">
-                        <div class="page-icon-top"><i class="ion ion-ios-gear-outline"></i></div>
-                        <h5>Tech Skills</h5>
-                        <p>Digital tools, software programs, and new methodologies in engineering and business are essential to professional development. Graduate engineering students are able to enhance their technical skills through various workshops and seminars.</p>
-                    </div>
-                    <div class="col-md-4 col-sm-12 mb-45">
                         <div class="page-icon-top"><i class="ion ion-ios-color-filter-outline"></i></div>
                         <h5>Design Thinking</h5>
                         <p>Design Thinking allows students to think beyond the constraints of established processes and known solutions for everyday problems.  Students are encouraged to work on solutions to questions that haven’t been asked and problems that haven’t been identified yet.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-12 mb-45">
+                        <div class="page-icon-top"><i class="ion ion-ios-gear-outline"></i></div>
+                        <h5>ENTREPRENEURSHIP & INNOVATION</h5>
+                        <p>Technology and innovation are the driving forces in solving complex problems around the world. Creative problem solving and the entrepreneurial mindset are important to developing a successful venture, whether as a start-up or working on a project within a company.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-12 mb-45">
+                        <div class="page-icon-top"><i class="ion ion-ios-lightbulb-outline"></i></div>
+                        <h5>Tech Skills</h5>
+                        <p>Digital tools, software programs, and new methodologies in engineering and business are essential to professional development. Graduate engineering students are able to enhance their technical skills through various workshops and seminars.</p>
                     </div>
                 </div>
             </div>
