--- a/events.html
+++ b/events.html
@@ -274,7 +274,7 @@
                     <div class="nf-item network spacing all">
                         <div class="item-box">
                             <a href="portfolio-single1.html">
-                                <img alt="1" src="img/portfolio/32.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/bootcamp.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">MGMT Consulting Bootcamp Networking & Case Interviews</h5>
@@ -316,11 +316,11 @@
                     <div class="nf-item sync spacing all">
                         <div class="item-box">
                             <a href="portfolio-single7-youtube.html">
-                                <img alt="1" src="img/portfolio/29.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/linkedin.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Professional Development 101: LinkedIn & the Elevator Pitch</h5>
-                                        <p class="salmon">Sync, Commuication</p>
+                                        <p class="salmon">Build, Sync, Commuication</p>
                                     </div>
                                 </div>
                             </a>
@@ -372,7 +372,7 @@
                     <div class="nf-item network spacing all">
                         <div class="item-box">
                             <a href="portfolio-single4.html">
-                                <img alt="1" src="img/portfolio/33.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/medialab.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">NYC Media Lab Summit</h5>
@@ -400,11 +400,11 @@
                     <div class="nf-item build sync spacing all">
                         <div class="item-box">
                             <a href="portfolio-single1.html">
-                                <img alt="1" src="img/portfolio/18.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/Fast pitch.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">LaTEX Workshop</h5>
-                                        <p class="salmon">Build, Tech Skills</p>
+                                        <h5 class="white">Fast Pitch</h5>
+                                        <p class="salmon">Build, Communiation, Entrepreneurship & Innovation</p>
                                     </div>
                                 </div>
                             </a>
@@ -414,7 +414,7 @@
                     <div class="nf-item build design spacing all">
                         <div class="item-box">
                             <a href="portfolio-single2.html">
-                                <img alt="1" src="img/portfolio/4.jpg" class="item-container">
+                                <img alt="1" src="img/portfolio/portfolio.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Design Portfolio Management</h5>
@@ -439,13 +439,55 @@
                         </div>
                     </div>
 
+                    <div class="nf-item build sync spacing all">
+                        <div class="item-box">
+                            <a href="portfolio-single5-slider.html">
+                                <img alt="1" src="img/portfolio/machinelearning.jpg" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                    <h5 class="white">Azure Machine Learning Studio</h5>
+                                    <p class="salmon">Build, Tech Skills, Entrepreneurship & Innovation</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>  
+
                     <div class="nf-item build design spacing all">
                         <div class="item-box">
                             <a href="portfolio-single4.html">
                                 <img alt="1" src="img/portfolio/ideation.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Portfolio Management</h5>
+                                        <h5 class="white">Data Visualization</h5>
+                                        <p class="salmon">Build, Design, Communication</p>
+                                    </div>
+                               </div>
+                           </a>
+                       </div>
+                   </div>  
+
+                    <div class="nf-item build design spacing all">
+                        <div class="item-box">
+                            <a href="portfolio-single4.html">
+                                <img alt="1" src="img/portfolio/publicspeaking.jpg" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Public Speaking: Engaging the Conference Crowd</h5>
+                                        <p class="salmon">Build, Communication</p>
+                                    </div>
+                               </div>
+                           </a>
+                       </div>
+                   </div>            
+
+                    <div class="nf-item build design spacing all">
+                        <div class="item-box">
+                            <a href="portfolio-single4.html">
+                                <img alt="1" src="img/portfolio/projectmgt.jpg" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Project Management</h5>
                                         <p class="salmon">Build, Design, Communication</p>
                                     </div>
                                 </div>
