--- a/events.html
+++ b/events.html
@@ -385,7 +385,7 @@
 
                     <div class="nf-item build sync spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single5-slider.html">
+                            <a href="cover_letter.html">
                                 <img alt="1" src="img/portfolio/coverletter.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
@@ -508,6 +508,7 @@
         <!-- End Work Section -->
 
         <!-- Testimonials -->
+        <!--
         <section id="testimonial" class="pb pb-sm-80">
             <div class="container">
                 <div class="owl-carousel testimonial-carousel nf-carousel-theme">
@@ -535,6 +536,7 @@
                 </div>
             </div>
         </section>
+        -->
         <!-- End Testimonials -->
         <div class="spacer-60"></div>
         <!-- END CONTENT ---------------------------------------------------------------------------->
