--- a/events.html
+++ b/events.html
@@ -386,7 +386,7 @@
                     <div class="nf-item build sync spacing all">
                         <div class="item-box">
                             <a href="cover_letter.html">
-                                <img alt="1" src="img/portfolio/coverletter.png" class="item-container">
+                                <img alt="1" src="img/portfolio/cover_letter.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Cover Letter & Business Writing</h5>
@@ -399,8 +399,8 @@
 
                     <div class="nf-item build sync spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single1.html">
-                                <img alt="1" src="img/portfolio/Fast pitch.jpg" class="item-container">
+                            <a href="fastpitch.html">
+                                <img alt="1" src="img/portfolio/fast_pitch.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
                                         <h5 class="white">Fast Pitch</h5>
@@ -413,7 +413,35 @@
 
                     <div class="nf-item build design spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single2.html">
+                            <a href="using_R_machine_learning.html">
+                                <img alt="1" src="img/portfolio/r_machine.jpg" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Using R in Azure Machine Learning Studio</h5>
+                                        <p class="salmon">Build, Tech Skills, Entrepreneurship & Innovation</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item build design spacing all">
+                        <div class="item-box">
+                            <a href="python.html">
+                                <img alt="1" src="img/portfolio/python.jpg" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Python Scripts in Azure Machine Learning Studio</h5>
+                                        <p class="salmon">Build, Tech Skills, Entrepreneurship & Innovation</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item build design spacing all">
+                        <div class="item-box">
+                            <a href="design_portfolio.html">
                                 <img alt="1" src="img/portfolio/portfolio.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
@@ -427,7 +455,7 @@
 
                     <div class="nf-item build sync spacing all">
                         <div class="item-box">
-                            <a href="diverse.html">
+                            <a href="citation.html">
                                 <img alt="1" src="img/portfolio/citation.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
@@ -441,7 +469,7 @@
 
                     <div class="nf-item build sync spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single5-slider.html">
+                            <a href="azure_machine_learning.html">
                                 <img alt="1" src="img/portfolio/machinelearning.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
@@ -469,7 +497,7 @@
 
                     <div class="nf-item build design spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single4.html">
+                            <a href="public_speaking.html">
                                 <img alt="1" src="img/portfolio/publicspeaking.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
@@ -483,7 +511,7 @@
 
                     <div class="nf-item build design spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single4.html">
+                            <a href="project_mgt.html">
                                 <img alt="1" src="img/portfolio/projectmgt.jpg" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
