--- a/contact.html
+++ b/contact.html
@@ -190,6 +190,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="team-item-info">
                                 <h5>Rachel Cohen</h5>
                                 <p class="">Career Placement Officer, Data Science Institute </p>
@@ -298,11 +299,52 @@
                             </div>
                         </div>
                     </div>
-
+                       <div class="col-md-3 col-sm-6 mb-30">
+                        <div class="team-item">
+                            <div class="team-item-img">
+                                <img src="img/team/gerald.jpg" alt="" />
+                                <div class="team-item-detail">
+                                    <div class="team-item-detail-inner light-color">
+                                        <h5>Gerald Cotiangco</h5>
+                                        <p>Before joining the IEOR Career Team at Columbia, Gerald worked for two New York City based nonprofits, where he coordinated volunteers, events, and programs. He received his BA in foreign languages from Eastern Illinois University.</p>
+                                        <ul class="social">
+                                            <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                            <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                            <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                                            <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
+                                            <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-item-info">
+                                <h5>Gerald Cotiangco</h5>
+                                <p class="">Graduate Student Services Coordinator </p>
                   
                             </div>
                         </div>
                     </div>
+                          <div class="col-md-3 col-sm-6 mb-30">
+                        <div class="team-item">
+                            <div class="team-item-img">
+                                <img src="img/team/tiffany.jpg" alt="" />
+                                <div class="team-item-detail">
+                                    <div class="team-item-detail-inner light-color">
+                                        <h5>Tiffany Alexander</h5>
+                                        <p>Tiffany has a background in graduate career development and a love for helping students obtain jobs that align with their specific career interests. She received her BA in Psychology from Saint John’s University, graduating magna cum laude, and her MS in Industrial/Organizational Psychology from Baruch College’s Weissman School of Arts and Sciences.</p>
+                                        <ul class="social">
+                                            <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                            <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                            <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                                            <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
+                                            <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-item-info">
+                                <h5>Tiffany Alexander</h5>
+                                <p class="">MSIE & MSOR, Career Placement Officer</p>
                     <!-- End Team Box -->
                 </div>
             </div>
